<resources>
    <!-- common -->
    <string name="common.title.app">Knigopis</string>
    <string name="common.error.network">Check your network connection</string>
    <string name="common.button.cancel">Cancel</string>
    <string name="common.info.dev">We Present A SPECIAL PRESENTATION</string>
    <plurals name="common.header.books">
        <item quantity="one">%d book</item>
        <item quantity="other">%d books</item>
    </plurals>
    <string name="common.book.notitle">(no title)</string>
    <string name="common.book.noauthor">(no author)</string>

    <!-- main screen -->
    <string name="main.navigation.home">Books</string>
    <string name="main.navigation.users">Following</string>
    <string name="main.navigation.notes">Comments</string>
    <string name="main.error.unauthorized">Please log in</string>

    <!-- main menu -->
    <string name="main.option.login">Login</string>
    <string name="main.option.profile">Profile</string>
    <string name="main.option.about">About</string>
    <string name="main_option_sort">Sort</string>
    <string name="main_option_sort_by_progress">By progress</string>
    <string name="main_option_sort_by_time">By update time</string>
    <string name="main_option_sort_by_title">By title</string>
    <string name="main_option_sort_by_author">By author</string>
    <string name="main_option_sort_users_by_time">By update time</string>
    <string name="main_option_sort_users_by_name">By nickname</string>
    <string name="main_option_sort_users_by_count">By books count</string>
    <string name="main_option_sort_users_by_new_count">By new books count</string>
    <string name="main_option_theme">Theme</string>
    <string name="main_option_theme_light">Light</string>
    <string name="main_option_theme_dark">Dark</string>
    <string name="main_option_theme_default">Set by Battery Saver</string>
    <string name="main.option.crash_report">Crash reporting</string>

    <!-- login -->
    <string name="login.title">Log in with…</string>
    <string name="login.website.vk">VKontakte</string>
    <string name="login.website.go">Google</string>
    <string name="login.website.fb">Facebook</string>
    <string name="login.website.mr">Mail.ru</string>
    <string name="login.website.ya">Yandex</string>
    <string name="login.website.tw">Twitter</string>
    <string name="login.website.in">Instagram</string>
    <string name="login.browser.title">No browsers found</string>
    <array name="login.browsers">
        <item>Install Firefox</item>
        <item>Install Chrome</item>
    </array>

    <!-- about -->
    <string name="about.text.idea">API:\nhttps://www.knigopis.com</string>
    <string name="about.text.developer">Development:\nvadik@sirekanyan.com</string>
    <string name="about.text.designer">Design:\nanna@sirekanyan.com</string>

    <!-- profile screen -->
    <string name="profile.hint.nickname">nickname</string>
    <string name="profile.hint.homepage">homepage</string>
    <string name="profile.text.todo">%d\ntodo</string>
    <string name="profile.text.doing">%d\nreading</string>
    <string name="profile.text.done">%d\ndone</string>
    <string name="profile.text.random">%1$s — %2$d%%</string>

    <!-- profile menu -->
    <string name="profile.option.edit">Edit</string>
    <string name="profile.option.save">Save</string>
    <string name="profile.option.share">Share</string>
    <string name="profile.option.logout">Logout</string>
    <string name="profile.error.save">Cannot update profile</string>
    <string name="profile.title.share">Share your profile</string>

    <!-- 🏠 books tab -->
    <string name="books.error.empty">You don\'t have any books</string>
    <string name="books.header.todo">Read later</string>
    <string name="books.header.doing">Reading now</string>
    <string name="books.header.done_first">Done in %s</string>
    <string name="books.header.done">%s</string>
    <string name="books.header.done_other">Other years</string>
    <string name="books.button.edit">Edit</string>
    <string name="books.button.delete">Delete</string>
    <string name="books.title.confirm_delete">Confirmation</string>
    <string name="books.message.confirm_delete">Are you sure you want to delete \"%s\"?</string>
    <string name="books.button.confirm_delete">Delete</string>
    <string name="books.error.delete">Cannot delete book</string>

    <!-- book screen -->
    <string name="book.title.add">Add book</string>
    <string name="book.title.edit">Edit book</string>
    <string name="book.hint.title">Title</string>
    <string name="book.hint.author">Author</string>
    <string name="book.hint.year">Year</string>
    <string name="book.hint.month">Month</string>
    <string name="book.hint.day">Day</string>
    <string name="book.hint.notes">Notes</string>
    <string name="book.checkbox.done">Done</string>
    <string name="book.notes.copied">Copied from %s</string>

    <!-- book menu -->
    <string name="book.option.save">Save</string>
    <string name="book.error.save">Cannot save book</string>

    <!-- 👨 users tab -->
    <string name="users.error.empty">You don\'t have any subscriptions yet</string>
    <string name="users.info.no_browser">No browser app found</string>

    <!-- user screen -->
    <string name="user.button.todo">Todo</string>
    <string name="user.button.done">Done</string>

    <!-- user menu -->
    <string name="user.option.copy">Copy link</string>
    <string name="user.option.unsubscribe">Unsubscribe</string>
    <string name="user.info.copied">Copied: %s</string>
    <string name="user.error.unsubscribe">Cannot unsubscribe</string>

    <!-- 🖍 notes tab -->
    <string name="notes.error.empty">No one is posted yet</string>

    <!-- social networks -->
    <string name="common.social.facebook">Facebook</string>
    <string name="common.social.instagram">Instagram</string>
    <string name="common.social.twitter">Twitter</string>
    <string name="common.social.telegram">Telegram</string>
    <string name="common.social.googleplus">Google+</string>
    <string name="common.social.vkontakte">VKontakte</string>
    <string name="common.social.mailru">Mail.Ru</string>
    <string name="common.social.linkedin">LinkedIn</string>
</resources>
